Refactored UserServiceTest and prepare to create integration tests